--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Webpage</title>
     <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello, World!</h1>
-</body>
+    <p>This is from Windows</p>
+  </body>
 </html>
